# nak_torch

./: .gitignore  LICENSE  README.md  __init__.py  example_kde.py  main.py  progress.txt  pyproject.toml  tmp.txt
.github/workflows/: run_test.yml
algorithms/: __init__.py  cbo.py
datasets/: two_bananas.npz
examples/: benchmark_comparison.py  benchmark_comparison2.py  example_aristoff_bangerth.py  example_bnn_msip_vs_deepensembles.py  example_bnn_msip_vs_svgd.py  example_bnn_msipgi_vs_deepensembles.py  example_bnn_uci.py  example_gaussian.py  example_gaussian_mvp.py  example_gmm.py  example_gmm_msipgi.py  example_gmm_msipgigs.py  example_gmm_sphericalradialquadrature_msip.py  example_gmm_sphericalradialquadrature_msipgs.py  example_himmelblau.py  example_kde.py  example_nn.py  example_nn_msip_vs_svgd.py  example_nn_msip_vs_svgd_v2.py  main.py  svgd_2d_bnn.py  svgd_2d_bnn_v2.py  svgd_2d_bnn_v3.py  viz_tools.py
examples/.ipynb_checkpoints/: example_aristoff_bangerth-checkpoint.py
examples/figs/: .gitignore
examples/functions/: __init__.py  aristoff_bangerth.py  banana.py
examples/functions/nns/: shallow_nn.py  shallow_nn_twodims.py
examples/functions/twodims/: banana.py  ring.py
functions/: __init__.py
functions/kde/: gaussian_kde.py
functions/twodims/: mixture_of_gaussians.py
slurm/: run_example.py  run_single_test.py  run_test_matrix  test_matrix.sh  test_matrix2.sh  test_matrix_aristoff_bangerth.sh  test_matrix_msip.sh
slurm/notebooks/: plot_results.py
slurm/problems/: __init__.py  aristoff_bangerth.py  joker.py  kfrflow_examples.py
src/nak_torch/: __init__.py
src/nak_torch/algorithms/: __init__.py  average.py  cbo.py  cbs.py  deepensembles.py  eks.py  grad_aldi.py  gradfree_aldi.py  kernel.py  kfrflow.py  msip.py  msip_geom_greedy.py  msip_greedy.py  msip_map.py  (+2 more)
tests/: test_kernel.py
tools/: __init__.py
tools/viz_tools/: twodims_viz_tools.py
(+24 files in other folders)
