[project]
name = "nak-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Sharp", email = "dannys4@mit.edu" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
nak-torch = "nak_torch:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
