[project]
name = "nak-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Sharp", email = "dannys4@mit.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "jaxtyping>=0.3.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "torch>=2.10",
    "tqdm>=4.67.1",
]

[project.scripts]
nak-torch = "nak_torch:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
