[project]
name = "nak-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Sharp", email = "dannys4@mit.edu" },
    { name = "Ayoub Belhadji", email = "abelhadj@mit.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "jaxtyping>=0.3.5",
    "numpy>=2.4.1",
    "torch>=2.10",
    "tqdm>=4.67.1",
]

[project.scripts]
nak-torch = "nak_torch:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
# minversion = "6.0"
# addopts = "-ra -q"
addopts = ["-p", "no:warnings"]
testpaths = [
    "tests",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
ignore = ["F722"]
